first draft of custom language switching and parsing. Still needs tons more work

--- a/pages/layout.html
+++ b/pages/layout.html
@@ -22,7 +22,7 @@
       }
     </script>
     <script>
-      window.lang = "{{ lang | safe }}";
+      window.lang = <%- lang %>;
 
       window.user = <%- user %>;
     </script>
