more i18n work, playing with a component approach, built SPA router from scratch, also still needs work

--- a/pages/layout.html
+++ b/pages/layout.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta id="language" data-language="{{ language }}" />
-    <meta id="page" data-page="{{ page }}" />
+    <meta id="language" data-language="<%- locale %>" />
+    <meta id="page" data-page="<%- page %>" />
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
     <%- assetFor('menu') %>
     <script>
@@ -22,8 +22,6 @@
       }
     </script>
     <script>
-      window.lang = <%- lang %>;
-
       window.user = <%- user %>;
     </script>
   </head>
